2 April 2007: Wouter
	- check sizes of udp received messages, not too short.
	- review changes. Some memmoves can be memcpys: 4byte aligned.
	  set id correctly on cached answers. 

29 March 2007: Wouter
	- writev or sendmsg used when answering from cache.
	  This avoids a copy of the data.
	- do not do useless byteswap on query id. Store reply flags in uint16
	  for easier access (and no repeated byteswapping).
	- reviewed code.
	- configure detects and config.h includes sys/uio.h for writev decl.

28 March 2007: Wouter
	- new config option: num-queries-per-thread.
	- added tpkg test for answering three queries at the same time
	  using one thread (from the query service list).

27 March 2007: Wouter
	- added test for cache and not cached answers, in testbound replays.
	- testbound can give config file and commandline options from the
	  replay file to unbound.
	- created test that checks if items drop out of the cache.
	- added word 'partitioned hash table' to documentation on slab hash.
	  A slab hash is a partitioned hash table.
	- worker can handle multiple queries at a time.

26 March 2007: Wouter
	- config settings for slab hash message cache.
	- test for cached answer.
	- Fixup deleting fake answer from testbound list.

23 March 2007: Wouter
	- review of yesterday's commits.
	- covered up memory leak of the entry locks.
	- answers from the cache correctly. Copies flags correctly.
	- sanity check for incoming query replies.
	- slabbed hash table. Much nicer contention, need dual cpu to see.

22 March 2007: Wouter
	- AIX configure check.
	- lock-verify can handle references to locks that are created
	  in files it has not yet read in.
	- threaded hash table test. 
	- unit test runs lock-verify afterwards and checks result.
	- need writelock to update data on hash_insert.
	- message cache code, msgreply code.

21 March 2007: Wouter
	- unit test of hash table, fixup locking problem in table_grow().
	- fixup accounting of sizes for removing items from hashtable.